@@ -354,6 +354,26 @@ function makeDocx(genobj, new_type, options, gen_private, type_info) {
             '" w:fill="auto"/></w:pPr>'
         } // Endif.
 
+        if (objs_list[i].options.spacing) {
+          var pSpacing = objs_list[i].options.spacing
+          if (typeof pSpacing === 'object') {
+            pPrData += '<w:spacing'
+            for (var pSpacingKey of [
+              'before',
+              'after',
+              'line',
+              'lineRule',
+              'beforeAutospacing',
+              'afterAutospacing'
+            ]) {
+              if (pSpacingKey in pSpacing)
+                pPrData +=
+                  ' w:' + pSpacingKey + '="' + pSpacing[pSpacingKey] + '"'
+            }
+            pPrData += '/>'
+          } // Endif.
+        } // Endif.
+
         if (objs_list[i].options.rtl) {
           pPrData += '<w:bidi w:val="1"/>'
         } // Endif.
@@ -1047,6 +1067,23 @@ function makeDocx(genobj, new_type, options, gen_private, type_info) {
     gen_private.plugs.type.msoffice.cbMakeRels,
     true
   )
+
+  for (var i = 1; i <= 3; i++) {
+    gen_private.plugs.intAddAnyResourceToParse(
+      'word\\_rels\\header' + i + '.xml.rels',
+      'buffer',
+      gen_private.type.msoffice.rels_app,
+      gen_private.plugs.type.msoffice.cbMakeRels,
+      true
+    )
+    gen_private.plugs.intAddAnyResourceToParse(
+      'word\\_rels\\footer' + i + '.xml.rels',
+      'buffer',
+      gen_private.type.msoffice.rels_app,
+      gen_private.plugs.type.msoffice.cbMakeRels,
+      true
+    )
+  } // End of for loop.
 
   // ----- API for Word documents: -----
 
